# Solero

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  io.github.bizzanteen.Solero.yml  run-solero.sh
.desktop/: solero.desktop
.github/workflows/: flatpak.yml
docs/: GUIDE.md
mcp/solero-mcp/: go.mod
mcp/solero-mcp/cmd/server/: main.go
mcp/solero-mcp/internal/aitx/: transaction.go
mcp/solero-mcp/internal/soleroclient/: client.go
mcp/solero-mcp/internal/toolreg/: register.go
mcp/solero-mcp/internal/tools/: mods.go  plugins.go  profiles.go
packaging/: io.github.bizzanteen.Solero.desktop  io.github.bizzanteen.Solero.metainfo.xml
resources/: bethini-skyrimse.json  resources.qrc
scripts/: check-no-mojibake.sh  gen_bethini.py
src/: main.cpp
src/ai/: AITransaction.cpp  AITransaction.h
src/app/: Application.cpp  Application.h  NxmRegister.cpp  NxmRegister.h  SingleInstance.cpp  SingleInstance.h
src/bethini/: BethiniData.cpp  BethiniData.h  BethiniWindow.cpp  BethiniWindow.h  IniEditorPanel.cpp  IniEditorPanel.h  IniFile.cpp  IniFile.h  IniKnowledgeBase.cpp  IniKnowledgeBase.h
src/core/: AppConfig.cpp  AppConfig.h  FileMove.cpp  FileMove.h  FileUtil.h  HealthCheck.cpp  HealthCheck.h  HostProcess.cpp  HostProcess.h  LoadOrderBackup.cpp  LoadOrderBackup.h  Log.cpp  Log.h  ModList.cpp  ModList.h  OutputModMigration.cpp  OutputModMigration.h  PluginList.cpp  PluginList.h  PluginOrigin.h  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  RelativeTime.h  ShaderCache.cpp  ShaderCache.h  StagingFolder.cpp  StagingFolder.h  Types.h  VersionUtil.h
src/deploy/: ConflictIndex.cpp  ConflictIndex.h  DeployEngine.cpp  DeployEngine.h  DeployMode.h  DeployRecord.cpp  DeployRecord.h  Linker.cpp  Linker.h  UnmanagedScanner.cpp  UnmanagedScanner.h
src/fomod/: FomodChoiceRecall.cpp  FomodChoiceRecall.h  FomodCondition.cpp  FomodCondition.h  FomodEngine.cpp  FomodEngine.h  FomodScanner.cpp  FomodScanner.h  FomodTypes.h
src/import/: Mo2Importer.cpp  Mo2Importer.h
src/install/: ArchiveLocator.cpp  ArchiveLocator.h  ArchiveTool.cpp  ArchiveTool.h  DataDirDetector.cpp  DataDirDetector.h  DependencyChecker.cpp  DependencyChecker.h  InstallConflict.h  InstallLayout.h  ModInstaller.cpp  ModInstaller.h  PluginFlagEditor.cpp  PluginFlagEditor.h  PluginScanner.cpp  PluginScanner.h  ProtonRuntime.h
src/io/: ProfileManifest.cpp  ProfileManifest.h
src/ipc/: IPCServer.cpp  IPCServer.h
src/loot/: LootSorter.cpp  LootSorter.h
src/nexus/: DownloadManager.cpp  DownloadManager.h  DownloadWorker.cpp  DownloadWorker.h  MirrorPick.cpp  MirrorPick.h  NexusApi.cpp  NexusApi.h  NxmHandler.cpp  NxmHandler.h
src/patch/: PatchScanner.cpp  PatchScanner.h
src/report/: Redactor.cpp  Redactor.h  ReportSubmitter.cpp  ReportSubmitter.h
src/saves/: SaveFile.cpp  SaveFile.h
src/tools/: CurlError.h  ExeResolve.h  PgpatcherConfig.cpp  PgpatcherConfig.h  RadiumPrep.cpp  RadiumPrep.h  ToolCatalog.cpp  ToolCatalog.h  ToolDownloader.cpp  ToolDownloader.h  ToolNameMap.cpp  ToolNameMap.h  ToolRunner.cpp  ToolRunner.h  ToolSetup.cpp  ToolSetup.h  ToolStore.cpp  ToolStore.h
src/ui/: BottomPanel.cpp  BottomPanel.h  ColumnFit.h  ConflictsTab.cpp  ConflictsTab.h  DataTab.cpp  DataTab.h  DownloadsTab.cpp  DownloadsTab.h  ElideDelegate.h  ExecutableDialog.cpp  ExecutableDialog.h  FileEditorDialog.cpp  FileEditorDialog.h  FomodWizard.cpp  FomodWizard.h  IconUtil.h  KeyboardShortcutsDialog.cpp  KeyboardShortcutsDialog.h  LeftPane.cpp  LeftPane.h  LootRulesEditor.cpp  LootRulesEditor.h  MainWindow.cpp  MainWindow.h  MenuFilter.h  ModFileTree.cpp  ModFileTree.h  ModInfoWidget.cpp  ModInfoWidget.h  ModListModel.cpp  ModListModel.h  ModListView.cpp  ModListView.h  NexusBrowser.cpp  NexusBrowser.h  NexusWebView.cpp  NexusWebView.h  PatchWizardDialog.cpp  PatchWizardDialog.h  (+40 more)
src/wabbajack/: WabbajackEngine.cpp  WabbajackEngine.h  WabbajackModlist.h
tests/: CMakeLists.txt  test_AppConfig.cpp  test_ColumnResize.cpp  test_ConflictIndex.cpp  test_CurlError.cpp  test_DataDirDetector.cpp  test_DependencyChecker.cpp  test_DeployEngine.cpp  test_DeployIncremental.cpp  test_DeployRecord.cpp  test_DirHasFiles.cpp  test_ExeResolve.cpp  test_FileMove.cpp  test_FomodChoiceRecall.cpp  test_FomodCondition.cpp  test_FomodEngine.cpp  test_FomodScanner.cpp  test_HealthCheck.cpp  test_HostProcess.cpp  test_IniFile.cpp  test_InstallConflict.cpp  test_Linker.cpp  test_LoadOrderBackup.cpp  test_MenuFilter.cpp  test_MirrorPick.cpp  test_Mo2Importer.cpp  test_ModInstaller.cpp  test_ModList.cpp  test_ModListModel.cpp  test_ModVariants.cpp  test_NexusApi.cpp  test_NxmHandler.cpp  test_OutputModMigration.cpp  test_PatchScanner.cpp  test_PgpatcherConfig.cpp  test_PluginFlagEditor.cpp  test_PluginList.cpp  test_PluginOrigin.cpp  test_PluginScanner.cpp  test_Profile.cpp  (+19 more)
tools/report-relay/: worker.js  wrangler.toml
